[package]
name = "icfp2024"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.99"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
clap = { version = "4.5.45", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
ordered-float = { version = "5.0.0", features = ["serde"] }
approx = "0.5.1"
rand = "0.9.2"
cairo-rs = { version = "0.21.1", features = ["pdf", "svg"] }
gtk = { version = "0.10.0", package = "gtk4", features = ["v4_18"] }
async-channel = "2.5.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
